# Snake_Game

./: .gitignore  CMakeLists.txt  makefile  readme.md  script.sh
colors/resources_embedded/: apple.png.h  body_bottomleft.png.h  body_bottomright.png.h  body_horizontal.png.h  body_topleft.png.h  body_topright.png.h  body_vertical.png.h  head_down.png.h  head_left.png.h  head_right.png.h  head_up.png.h  snake.png.h  tail_down.png.h  tail_left.png.h  tail_right.png.h  tail_up.png.h
include/: constante.hpp  food.hpp  game.hpp  main.hpp  snake.hpp
scripts/: color_chose.sh  generation_header.sh
src/: food.cpp  game.cpp  main.cpp  snake.cpp
